fix responsive header (no mobile menu yet)

--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -20,7 +20,7 @@
             <img src={~p"/images/kdd-logo-inverse.png"} alt="KDD Logo" alt="Logo" class="h-8 w-8 mr-2" />
           </a>
         </div>
-        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+        <div class="w-full block flex-grow hidden lg:flex lg:items-center lg:w-auto">
           <div class="text-sm lg:flex-grow">
             <a href="/notion" class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
               Notion
@@ -29,11 +29,11 @@
               About
             </a>
           </div>
-          <div>
-            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 hover:underline mr-4">
-              User
-            </a>
-          </div>
+        </div>
+        <div class="inline-block items-center">
+          <a href="#" alt="Coming soon" class="block mt-4 text-lg mt-0 hover:underline mr-4">
+            Login
+          </a>
         </div>
       </nav>
     </header>
