--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -14,7 +14,7 @@
   <body>
     <header>
 
-      <nav class="flex items-center justify-between flex-wrap bg-black text-white p-6">
+      <nav class="flex items-center justify-between flex-wrap bg-black lg:shadow-xl sm:shadow text-white p-6">
         <div class="flex items-center flex-shrink-0 mr-6">
           <a href="/" class="flex items-center py-4 px-2">
             <img src={~p"/images/kdd-logo-inverse.png"} alt="KDD Logo" alt="Logo" class="h-8 w-8 mr-2" />
