add a link to connect to Notion

--- a/lib/kdd_web/controllers/page_html/notion.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion.html.heex
@@ -5,3 +5,9 @@ I am available to <a class="text-gray-600 hover:underline"  href={@contact} >con
 <p>
 This website showcases some examples.
 </p>
+<p>
+<a class="font-semibold hover:text-gray-600" href={@integration} >Connect your Notion account. </a>
+</p>
+<p>
+You may remove this integration from your Notion workspace at any point.
+</p>
