added notion auth

--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -22,18 +22,16 @@
         </div>
         <div class="w-full block flex-grow hidden lg:flex lg:items-center lg:w-auto">
           <div class="text-sm lg:flex-grow">
-            <a href="/notion" class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
+            <a href={~p"/notion"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
               Notion
             </a>
-            <a href="/about" class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
+            <a href={~p"/about"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
               About
             </a>
           </div>
         </div>
         <div class="inline-block items-center">
-          <a href="#" alt="Coming soon" class="block mt-4 text-lg mt-0 hover:underline mr-4">
-            Login
-          </a>
+
         </div>
       </nav>
     </header>
