added the budget app

--- a/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
@@ -11,3 +11,7 @@ This website showcases some examples.
 <p>
 You may remove this integration from your Notion workspace at any point.
 </p>
+<h1 class="text-lg font-semibold">Demo apps</h1>
+<p>
+<a class="hover:underline" href={~p"/apps/budget"}>Record you expenses in Notion to manage your monthly budget.</a>
+</p>
