--- a/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
@@ -9,6 +9,6 @@
       <%= text_input f, :expense_db, class: "notionLink border rounded", size: 40 %>
     </div>
     <div>
-      <%= submit "Save" %>
+      <%= submit "Save", class: "font-semibold hover:underline" %>
     </div>
     <% end %>
