--- a/lib/kdd_web/controllers/apps/budget_html/index.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/index.html.heex
@@ -2,6 +2,9 @@
     <div class="flex-grow w-auto">
         <h1 class="text-2xl font-semilbold">Budget</h1>
     </div>
+    <div class="mr-4">
+        <a href={~p"/apps/budget/expense"} class="text-lg text-gray-600 hover:underline">Add an expense</a>
+    </div>
     <div>
         <a href={~p"/apps/budget/settings"} class="text-lg text-gray-600 hover:underline">Settings</a>
     </div>
