refactor form views

--- a/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
@@ -1,14 +1,6 @@
     <h1 class="text-xl font-semibold">Budget</h1>
-    <%= form_for @changeset, ~p"/apps/budget/configure", fn f -> %>
-    <div class="flex justify-between">
-      <label>Budget Database page ID</label>
-      <%= text_input f, :budget_db, class: "notionLink border rounded", size: 40 %>
-    </div>
-    <div class="flex justify-between">
-      <label>Expenses Database page ID</label>
-      <%= text_input f, :expense_db, class: "notionLink border rounded", size: 40 %>
-    </div>
-    <div>
-      <%= submit "Save", class: "font-semibold hover:underline" %>
-    </div>
-    <% end %>
+    <.simple_form :let={f} for={@form} action={~p"/apps/budget/configure"}>
+      <.input field={f[:budget_db]} label="Budget Database page ID" input_class="notionLink" />
+      <.input field={f[:expense_db]} label="Expenses Database page ID" input_class="notionLink" />
+      <.button>Save</.button>
+    </.simple_form>
