--- a/lib/kdd_web/controllers/apps/budget_html/index.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/index.html.heex
@@ -9,3 +9,6 @@
         <a href={~p"/apps/budget/settings"} class="text-lg text-gray-600 hover:underline">Settings</a>
     </div>
 </div>
+<div>
+    <iframe  width="1000" height="800" src={~p"/api/apps/budget/plot"}  />
+</div>
