--- a/lib/kdd_web/controllers/apps/budget_html/index.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/index.html.heex
@@ -10,5 +10,5 @@
     </div>
 </div>
 <div>
-    <iframe  width="1000" height="800" src={~p"/api/apps/budget/plot"}  />
+    <iframe  width="100%" height="800" src={~p"/apps/budget/plot"}  />
 </div>
