--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content={get_csrf_token()} />
     <%= live_title_tag assigns[:page_title] || "KDD" %>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"}/>
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href={~p"/site.webmanifest"}>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <body>
