--- a/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
@@ -6,7 +6,8 @@
 import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
 import {json} from "https://cdn.skypack.dev/d3-fetch@3";
 
-json("/api/apps/budget/month_to_date").then((data) => {
+json("/api/apps/budget/month_to_date", {timeout: 1000*60})
+.then((data) => {
     const plot = Plot.plot({
         marks: [
             Plot.barY(data, Plot.groupX({y: "identity"}, {x: "type", fx: "category", y: "value"}))
