--- a/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
@@ -11,7 +11,10 @@ This website showcases some examples.
 <p>
 You may remove this integration from your Notion workspace at any point.
 </p>
-<h1 class="text-lg font-semibold">Demo apps</h1>
+<h1 class="text-lg font-semibold">Budget demo</h1>
 <p>
-<a class="hover:underline" href={~p"/apps/budget"}>Record you expenses in Notion to manage your monthly budget.</a>
+<a class="text-gray-600 hover:underline" href="https://karmadrivendevelopment.notion.site/Spending-Diary-6a72fc1003b04831ba184494aa514197">Record you expenses in Notion to manage your monthly budget.</a>
+</p>
+<p>
+<a class="text-gray-600 hover:underline" href={~p"/apps/budget"}>Go to app.</a>
 </p>
