--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -35,7 +35,11 @@
           </div>
         </div>
         <div class="inline-block items-center">
-
+          <%= if @conn.assigns[:kdd_token] do %>
+            <a href={~p"/auth/logout"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
+                Logout
+              </a>
+          <% end %>
         </div>
       </nav>
     </header>
