--- a/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/settings.html.heex
@@ -1,6 +1,14 @@
-    <h1 class="text-xl font-semibold">Budget</h1>
-    <.simple_form :let={f} for={@form} action={~p"/apps/budget/configure"}>
-      <.input field={f[:budget_db]} label="Budget Database page ID" input_class="notionLink" />
-      <.input field={f[:expense_db]} label="Expenses Database page ID" input_class="notionLink" />
-      <.button>Save</.button>
-    </.simple_form>
+<div class="flex space-between">
+    <div class="flex-grow w-auto">
+        <h1 class="text-2xl font-semilbold">Settings</h1>
+    </div>
+    <div class="mr-4">
+        <a href={~p"/apps/budget"} class="text-lg text-gray-600 hover:underline">Home</a>
+    </div>
+</div>
+  <h1 class="text-xl font-semibold">Budget</h1>
+  <.simple_form :let={f} for={@form} action={~p"/apps/budget/configure"}>
+    <.input field={f[:budget_db]} label="Budget Database page ID" input_class="notionLink" />
+    <.input field={f[:expense_db]} label="Expenses Database page ID" input_class="notionLink" />
+    <.button>Save</.button>
+  </.simple_form>
