try rotating labels

--- a/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
@@ -8,12 +8,20 @@ import {json} from "https://cdn.skypack.dev/d3-fetch@3";
 
 json("/api/apps/budget/month_to_date", {timeout: 0})
 .then((data) => {
+    var angle = 0;
+    if (data.length > 12) {
+        angle = 15;
+    }
+    if (data.length > 18) {
+        angle = 30;
+    }
     const plot = Plot.plot({
         color: {"legend": true},
+        marginBottom: 40,
         x: {"axis": null},
         marks: [
             Plot.barY(data, Plot.groupX({y: "identity"}, {x: "type", fx: "category", y: "value", fill: "type"})),
-            Plot.axisFx({anchor: "bottom", tickRotate: 0, label: null, textAnchor: "centre"}),
+            Plot.axisFx({anchor: "bottom", tickRotate: angle, label: null, textAnchor: "centre"}),
             Plot.ruleY([0])
         ]
     });
