--- a/lib/kdd_web/controllers/page_html/notion.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion.html.heex
@@ -1,6 +1,6 @@
 <h1 class="text-2xl font-semibold">Notion</h1>
 <p>
-I am available to <a class="text-gray-600 hover:underline"  href={@contact} >consult</a> on using <a class="text-gray-600 hover:underline"  href="https://notion.so/">Notion</a> to streamline your business or personal life.
+I am available to <a class="text-gray-600 hover:underline"  href={@contact} >consult</a> on using <a class="text-gray-600 hover:underline"  href="https://affiliate.notion.so/epz8k3pigy59">Notion</a> to streamline your business or personal life.
 </p>
 <p>
 This website showcases some examples.
