--- a/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
 <html>
-<div id="myplot"></div>
-<script type="module">
+<head>
+    <style>
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% {  transform: rotate(359deg); }
+        }
+        #spinner {
+            animation: spin 2s linear infinite;
+        }
+    </style>
+</head>
+<body>
+    <div id="myplot">
+        <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+            <circle cx="24" cy="4" r="4" fill="#1ff0f0"/>
+            <circle cx="12.19" cy="7.86" r="3.7" fill="#1ffbf2"/>
+            <circle cx="5.02" cy="17.68" r="3.4" fill="#1ef7e4"/>
+            <circle cx="5.02" cy="30.32" r="3.1" fill="#1ef3d7"/>
+            <circle cx="12.19" cy="40.14" r="2.8" fill="#1eefc9"/>
+            <circle cx="24" cy="44" r="2.5" fill="#1eebbc"/>
+            <circle cx="35.81" cy="40.14" r="2.2" fill="#1de7af"/>
+            <circle cx="42.98" cy="30.32" r="1.9" fill="#1de3a1"/>
+            <circle cx="42.98" cy="17.68" r="1.6" fill="#1ddf94"/>
+            <circle cx="35.81" cy="7.86" r="1.3" fill="#1cdb86"/>
+        </svg>
+    </div>
+    <script type="module">
 
-import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
-import {json} from "https://cdn.skypack.dev/d3-fetch@3";
+    import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
+    import {json} from "https://cdn.skypack.dev/d3-fetch@3";
 
-json("/api/apps/budget/month_to_date", {timeout: 0})
-.then((data) => {
-    var angle = 0;
-    if (data.length > 12) {
-        angle = 15;
-    }
-    if (data.length > 18) {
-        angle = 30;
-    }
-    const plot = Plot.plot({
-        color: {"legend": true},
-        marginBottom: 40,
-        x: {"axis": null},
-        marks: [
-            Plot.barY(data, Plot.groupX({y: "identity"}, {x: "type", fx: "category", y: "value", fill: "type"})),
-            Plot.axisFx({anchor: "bottom", tickRotate: angle, label: null, textAnchor: "centre"}),
-            Plot.ruleY([0])
-        ]
+    json("/api/apps/budget/month_to_date", {timeout: 0})
+    .then((data) => {
+        var angle = 0;
+        if (data.length > 12) {
+            angle = 15;
+        }
+        if (data.length > 18) {
+            angle = 30;
+        }
+        const plot = Plot.plot({
+            color: {"legend": true},
+            marginBottom: 40,
+            x: {"axis": null},
+            marks: [
+                Plot.barY(data, Plot.groupX({y: "identity"}, {x: "type", fx: "category", y: "value", fill: "type", tip: true})),
+                Plot.axisFx({anchor: "bottom", tickRotate: angle, label: null, textAnchor: "centre"}),
+                Plot.ruleY([0])
+            ]
+        });
+        const div = document.querySelector("#myplot");
+        var heading = document.createElement("h3");
+        heading.innerHTML = "Monthly spend";
+        heading.style.fontFamily = "system-ui";
+        heading.style.fontWeight = "normal";
+
+        div.replaceChildren(heading, plot);
     });
-    const div = document.querySelector("#myplot");
-    var heading = document.createElement("h3");
-    heading.innerHTML = "Monthly spend (work-in-progress)";
-    heading.style.fontFamily = "system-ui";
-    heading.style.fontWeight = "normal";
 
-    div.append(heading);
-    div.append(plot);
-});
-
-</script>
+    </script>
+</body>
 </html>
