--- a/lib/kdd_web/controllers/apps/budget_html/expense.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/expense.html.heex
@@ -9,4 +9,4 @@
         <a href={~p"/apps/budget/settings"} class="text-lg text-gray-600 hover:underline">Settings</a>
     </div>
 </div>
-<%= live_render(@conn, KddWeb.LiveExpense) %>
+<%= live_render(@conn, KddWeb.LiveExpense, session: %{"user_id" => @conn.assigns[:user].id}) %>
