--- a/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
@@ -7,12 +7,12 @@
             100% {  transform: rotate(359deg); }
         }
         #spinner {
-            animation: spin 2s linear infinite;
+            animation: spin 3s linear infinite;
         }
     </style>
 </head>
 <body>
-    <div id="myplot">
+    <div id="myplot" style="align-content: center;">
         <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
             <circle cx="24" cy="4" r="4" fill="#1ff0f0"/>
             <circle cx="12.19" cy="7.86" r="3.7" fill="#1ffbf2"/>
