--- a/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
+++ b/lib/kdd_web/controllers/apps/budget_html/plot.html.heex
@@ -12,19 +12,10 @@
     </style>
 </head>
 <body>
-    <div id="myplot" style="align-content: center;">
-        <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-            <circle cx="24" cy="4" r="4" fill="#1ff0f0"/>
-            <circle cx="12.19" cy="7.86" r="3.7" fill="#1ffbf2"/>
-            <circle cx="5.02" cy="17.68" r="3.4" fill="#1ef7e4"/>
-            <circle cx="5.02" cy="30.32" r="3.1" fill="#1ef3d7"/>
-            <circle cx="12.19" cy="40.14" r="2.8" fill="#1eefc9"/>
-            <circle cx="24" cy="44" r="2.5" fill="#1eebbc"/>
-            <circle cx="35.81" cy="40.14" r="2.2" fill="#1de7af"/>
-            <circle cx="42.98" cy="30.32" r="1.9" fill="#1de3a1"/>
-            <circle cx="42.98" cy="17.68" r="1.6" fill="#1ddf94"/>
-            <circle cx="35.81" cy="7.86" r="1.3" fill="#1cdb86"/>
-        </svg>
+    <div id="myplot">
+        <div id="loading">
+            <.loading_spinner />
+        </div>
     </div>
     <script type="module">
 
