--- a/lib/kdd_web/controllers/apps/events_html/index.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/index.html.heex
@@ -1,5 +1,5 @@
 <h1><%= @title %></h1>
 
 <%= for record <- @data do %>
-    <.event_row record={record} /> 
+    <.event_row record={record} base_url={@base_url} /> 
 <% end %>
