--- a/lib/kdd_web/controllers/page_html/notion.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion.html.heex
@@ -9,5 +9,5 @@ This website showcases some examples.
 <a class="font-semibold hover:text-gray-600" href={@integration} >Connect your Notion account. </a>
 </p>
 <p>
-You may remove this integration from your Notion workspace at any point.
+You may remove this integration - data.kdd - from your Notion workspace at any point.
 </p>
