--- a/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
@@ -9,7 +9,7 @@ This website showcases some examples.
 <span class="font-semibold" >You are connected to the Notion account: <%= @workspace_name %></span>
 </p>
 <p>
-You may remove this integration from your Notion workspace at any point.
+You may remove this integration - data.kdd - from your Notion workspace at any point.
 </p>
 <h1 class="text-lg font-semibold">Budget demo</h1>
 <p>
