--- a/lib/kdd_web/controllers/apps/events_html/index.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/index.html.heex
@@ -1,4 +1,4 @@
-<h1><%= @title %></h1>
+<.heading><%= @title %></.heading>
 
 <%= for record <- @data do %>
     <.event_row record={record} base_url={@base_url} /> 
