--- a/lib/kdd_web/controllers/apps/events_html/register.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/register.html.heex
@@ -1,3 +1,7 @@
 <.heading>Register for <%= @event["Name"] %></.heading>
-
-<%= inspect @event %>
+<.simple_form :let={f} for={@form} action={~p"/apps/events/#{@link}/signup"}>
+    <.input field={f[:event_id]} type="hidden" value={@event["id"]} /> 
+    <.input field={f[:name]} label="Your name" />
+    <.input field={f[:phone]} label="Phone number" />
+    <.button>Sign up</.button>
+</.simple_form>
