--- a/lib/kdd_web/controllers/apps/events_html/browse.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/browse.html.heex
@@ -1,7 +1,7 @@
 <.heading>Browse hosts</.heading>
 
 <%= for record <- @data do %>
-    <p> 
-        <a href={record.link}><%= record.host_name %></a>
-    </p>
+  <p>
+    <.host_link record={record} />
+  </p>
 <% end %>
