--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -27,6 +27,9 @@
             <a href={~p"/about"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
               About
             </a>
+            <a href={~p"/kdd"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
+              KDD
+            </a>
             <%= if @kdd_token do %>
               <a href={~p"/apps/budget"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
                 Budget
