make yoga bio page

--- a/lib/kdd_web/controllers/page_html/home.html.heex
+++ b/lib/kdd_web/controllers/page_html/home.html.heex
@@ -1,4 +1,11 @@
-<h1 class="text-2xl font-semibold">Home page for Baruch Lubinsky</h1>
+<h1 class="text-2xl text-align-centre font-semibold">Baruch Mordecai Lubinsky</h1>
+<p>
+Welcome to my home page. Here I collect some of my interests. My own little corner of the internet to host my personal information and projects.
+</p>
 <p>
 Under construction.
 </p>
+<h2 class="text-xl">Yoga / Mindfulness</h2>
+
+<h2 class="text-xl">Software Engineering</h2>
+
