--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -19,7 +19,6 @@
             <img
               src={~p"/images/kdd-logo-inverse.png"}
               alt="KDD Logo"
-              alt="Logo"
               class="h-8 w-8 mr-2"
             />
           </a>
@@ -27,10 +26,10 @@
         <div class="w-full block flex-grow hidden lg:flex lg:items-center lg:w-auto">
           <div class="text-sm lg:flex-grow">
             <a
-              href={~p"/notion"}
+              href={~p"/yoga"}
               class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4"
             >
-              Notion
+              Yoga
             </a>
             <a
               href={~p"/about"}
@@ -40,6 +39,12 @@
             </a>
             <a href={~p"/kdd"} class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4">
               KDD
+            </a>
+            <a
+              href={~p"/notion"}
+              class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4"
+            >
+              Notion
             </a>
             <%= if @kdd_token do %>
               <a
