--- a/lib/kdd_web/controllers/page_html/consult.html.heex
+++ b/lib/kdd_web/controllers/page_html/consult.html.heex
@@ -2,7 +2,7 @@
 <p>
   I am available to <a class="text-gray-600 hover:underline" href={"mailto:#{@contact}"}>consult</a>
   on using
-  <a class="text-gray-600 hover:underline" href="https://affiliate.notion.so/epz8k3pigy59">
+  <a class="text-gray-600 hover:underline" href="https://affiliate.notion.so/epz8k3pigy59" target="_blank">
     Notion
   </a>
   to streamline your business or personal life.
@@ -17,4 +17,14 @@
 </p>
 <p>
   You may remove this integration - data.kdd - from your Notion workspace at any point.
+</p>
+<h2 class="text-lg font-semibold">Budget demo</h2>
+<p>
+  <a
+    class="text-gray-600 hover:underline"
+    href="https://karmadrivendevelopment.notion.site/Spending-Diary-6a72fc1003b04831ba184494aa514197"
+    target="_blank"
+  >
+    Record you expenses in Notion to manage your monthly budget.
+  </a>
 </p>
