--- a/lib/kdd_web/controllers/page_html/home.html.heex
+++ b/lib/kdd_web/controllers/page_html/home.html.heex
@@ -6,6 +6,22 @@ Welcome to my home page. Here I collect some of my interests. My own little corn
 Under construction.
 </p>
 <h2 class="text-xl">Yoga / Mindfulness</h2>
+<p>
+  <a class="hover:underline" href={~p"/yoga"}>Yoga teaching bio and upcoming sessions.</a>
+</p>
 
 <h2 class="text-xl">Software Engineering</h2>
+<p>
+<a class="hover:underline" href="https://www.linkedin.com/in/baruch-lubinsky-8b24b824/" target="_blank">LinkedIn</a>
+</p>
+<p>
+<a class="hover:underline" href="https://baruchlubinsky.notion.site/CV-for-Baruch-Lubinsky-4a561964baba41c18dbdaccfd57d7200" target="_blank">CV</a>
+</p>
 
+<h2 class="text-xl">Consulting</h2>
+<p>
+  I've used the Notion API to develop a couple of little apps, hosted here.
+</p>
+<p>
+  <a class="hover:underline" href={~p"/consult"}>More info</a>
+</p>
