--- a/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
+++ b/lib/kdd_web/controllers/page_html/notion_logged_in.html.heex
@@ -1,6 +1,6 @@
 <h1 class="text-2xl font-semibold">Notion</h1>
 <p>
-I am available to <a class="text-gray-600 hover:underline"  href={"mailto:#{@contact}"} >consult</a> on using <a class="text-gray-600 hover:underline"  href="https://notion.so/">Notion</a> to streamline your business or personal life.
+I am available to <a class="text-gray-600 hover:underline"  href={"mailto:#{@contact}"} >consult</a> on using <a class="text-gray-600 hover:underline"  href="https://affiliate.notion.so/epz8k3pigy59" target="_blank">Notion</a> to streamline your business or personal life.
 </p>
 <p>
   This website showcases some examples.
@@ -18,6 +18,7 @@ I am available to <a class="text-gray-600 hover:underline"  href={"mailto:#{@con
   <a
     class="text-gray-600 hover:underline"
     href="https://karmadrivendevelopment.notion.site/Spending-Diary-6a72fc1003b04831ba184494aa514197"
+    target="_blank"
   >
     Record you expenses in Notion to manage your monthly budget.
   </a>
