add dev acount function

--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -47,7 +47,7 @@
               KDD
             </a>
             <%= if @kdd_token do %>
-              |
+              <div class="inline-block w-0.5 h-3 mr-4 bg-white" />
               <a
                 href={~p"/apps/budget"}
                 class="block mt-4 lg:inline-block text-lg font-semibold lg:mt-0 hover:underline mr-4"
