events app is working

--- a/lib/kdd_web/controllers/apps/events_html/settings.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/settings.html.heex
@@ -4,5 +4,6 @@
   <.input field={f[:link]} label="Page link" />
   <.input field={f[:events_db]} label="Events Database page ID" input_class="notionLink" />
   <.input field={f[:signups_db]} label="Signups Database page ID" input_class="notionLink" />
+  <.input field={f[:events_name]} label="Signup relation name to Events" />
   <.button>Save</.button>
 </.simple_form>
