--- a/lib/kdd_web/components/layouts/root.html.heex
+++ b/lib/kdd_web/components/layouts/root.html.heex
@@ -10,6 +10,8 @@
     <link rel="manifest" href={~p"/images/site.webmanifest"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/kdd.js"}>
+    </script>
   </head>
   <body>
     <header>
