--- a/lib/kdd_web/controllers/apps/events_html/register.html.heex
+++ b/lib/kdd_web/controllers/apps/events_html/register.html.heex
@@ -1,3 +1,3 @@
 <.heading><%= @title %></.heading>
-<.event_row record={@record} link="." />
+<.event_row record={@record} link="" />
 <.signup_form record={@record} link={@link} />
