reorganise and rewrite

--- a/lib/kdd_web/controllers/page_html/consult.html.heex
+++ b/lib/kdd_web/controllers/page_html/consult.html.heex
@@ -1,30 +1,33 @@
-<h1 class="text-2xl font-semibold">Notion</h1>
+<.heading>Consulting</.heading>
+<.heading2>Notion</.heading2>
 <p>
-  I am available to <a class="text-gray-600 hover:underline" href={"mailto:#{@contact}"}>consult</a>
-  on using
-  <a class="text-gray-600 hover:underline" href="https://affiliate.notion.so/epz8k3pigy59" target="_blank">
-    Notion
-  </a>
-  to streamline your business or personal life.
+We live in a time when one's attention has become a commodity.
+This makes your focus a valuable asset.
 </p>
 <p>
-  This website showcases some examples.
+My experience with most popular softwre is that there is too much interface. 
+From Google Docs to Jira, the proliferation of buttons and options draw my attention
+away from the content that I'm working on.
 </p>
 <p>
-  <a class="font-semibold hover:text-gray-600" href={@integration}>
-    Connect your Notion account. 
-  </a>
+The clean interface and pleasingly rendered documents are what first attracted me to <.link href="https://notion.so">Notion</.link>. 
+As a Docs / Word alternative alone it is compelling. 
+But, Notion can do so much more. 
 </p>
 <p>
-  You may remove this integration - data.kdd - from your Notion workspace at any point.
+Notion has powerful and flexible database functionality that can be leveraged for a great variety of
+productivity and knowledge management applications. 
 </p>
-<h2 class="text-lg font-semibold">Budget demo</h2>
 <p>
-  <a
-    class="text-gray-600 hover:underline"
-    href="https://karmadrivendevelopment.notion.site/Spending-Diary-6a72fc1003b04831ba184494aa514197"
-    target="_blank"
-  >
-    Record you expenses in Notion to manage your monthly budget.
-  </a>
+Furthermore, combining you organisation's processes and documentation in one platform has multiple benefits.
+When done well this can enable everyone to work together with less friction and more accounibility. 
+</p>
+<p>
+In my past jobs I have successfully onboarded diverse teams onto Notion.
+From procurement to business development.
+I worked with each team to develop processes and implement them in Notion as required. 
+In each case the mutual benefit increases exponentially the more people are working on the one platform.
+</p> 
+<p>
+<.link href={"mailto:#{@contact}"}>Contact me for a free introductory call and demo.</.link>
 </p>
