--- a/lib/kdd_web/controllers/page_html/apps.html.heex
+++ b/lib/kdd_web/controllers/page_html/apps.html.heex
@@ -1,10 +1,11 @@
-<h1 class="text-2xl font-semibold">Notion</h1>
+<.heading>Notion Apps</.heading>
 <p>
-I am available to <a class="text-gray-600 hover:underline"  href={"mailto:#{@contact}"} >consult</a> on using <a class="text-gray-600 hover:underline"  href="https://affiliate.notion.so/epz8k3pigy59" target="_blank">Notion</a> to streamline your business or personal life.
+I am available to <.link href={~p"/consult"} >consult</.link> on using <.link  href="https://notion.so" target="_blank">Notion</.link> to streamline your business or personal life.
 </p>
 <p>
-  This website showcases some examples.
+  This website showcases some examples of apps built on top of Notion as the data store.
 </p>
+<%= if @workspace_name do %>
 <p>
   <span class="font-semibold">
     You are connected to the Notion account: <%= @workspace_name %>
@@ -26,3 +27,12 @@ I am available to <a class="text-gray-600 hover:underline"  href={"mailto:#{@con
 <p>
   <a class="text-gray-600 hover:underline" href={~p"/apps/budget"}>Go to app.</a>
 </p>
+<% else %>
+<p>
+  <.heading3>
+  <.link href={@integration}>
+    Connect your Notion account. 
+  </.link>
+  </.heading3>
+</p>
+<% end %>
