--- a/lib/kdd_web/controllers/page_html/consult.html.heex
+++ b/lib/kdd_web/controllers/page_html/consult.html.heex
@@ -1,4 +1,12 @@
-<.heading>Consulting</.heading>
+<.heading>Hollistic Management Consulting</.heading>
+<p>
+I am combining my experience working in fast-paced tech starups with my understanding of mindfulness and psychology to offer a different sort of management consulting.
+These consulting offerings are centered on the use of my favorite productivity tool, <.hlink href="https://notion.so" target="_blank">Notion</.hlink>. 
+What I am actually selling is a new approach to collaboration at work. 
+One that prioritises transparency and accountibility at all levels.  
+And creates process that serve and benefit all the people who use them. 
+With the goal of building organisations where each inidividual is supported to thrive. 
+</p>
 <.heading2>Notion</.heading2>
 <p>
 We live in a time when one's attention has become a commodity.
@@ -10,7 +18,7 @@ From Google Docs to Jira, the proliferation of buttons and options draw my atten
 away from the content that I'm working on.
 </p>
 <p>
-The clean interface and pleasingly rendered documents are what first attracted me to <.link href="https://notion.so">Notion</.link>. 
+The clean interface and pleasingly rendered documents are what first attracted me to <.hlink href="https://notion.so" target="_blank">Notion</.hlink>. 
 As a Docs / Word alternative alone it is compelling. 
 But, Notion can do so much more. 
 </p>
@@ -20,7 +28,7 @@ productivity and knowledge management applications.
 </p>
 <p>
 Furthermore, combining you organisation's processes and documentation in one platform has multiple benefits.
-When done well this can enable everyone to work together with less friction and more accounibility. 
+When done well this can enable everyone to work together with less friction and more accountibility. 
 </p>
 <p>
 In my past jobs I have successfully onboarded diverse teams onto Notion.
@@ -28,6 +36,64 @@ From procurement to business development.
 I worked with each team to develop processes and implement them in Notion as required. 
 In each case the mutual benefit increases exponentially the more people are working on the one platform.
 </p> 
-<p>
-<.link href={"mailto:#{@contact}"}>Contact me for a free introductory call and demo.</.link>
+<p class="font-bold">
+<.hlink href={"mailto:#{@contact}"}>Contact me for a free 30 minute introductory call and demo.</.hlink>
 </p>
+<.heading2>Packages</.heading2> 
+<p>
+The following services are offered online, or in person in Johannesburg. 
+</p>
+<.heading3>Initial Onboarding</.heading3>
+<p>
+Get started using Notion. This session lasts for 2-3 hours.
+</p>
+<ul class="list-disc pl-6">
+    <li>Walkthrough of basic Notion functionality</li>
+    <li>Understand Pages, Databases, Relations and Linking</li>
+    <li>Discuss your specific needs and implement one Database for task tracking or knowledge management.</li> 
+</ul>
+<p>
+$100 or R1500 for inidividuals or teams of up 5 people
+</p>
+<p>
+$150 or R2500 for larger teams
+</p>
+<.cta>
+<.hlink href={"mailto:#{@contact}?subject='Notion Onboarding'"}>More info</.hlink>
+</.cta>
+<.heading3>Project Work</.heading3>
+Hire me ad-hoc to support on using and configuring Notion.
+<ul class="list-disc pl-6">
+    <li>Walkthrough of basic Notion functionality</li>
+    <li>Understand Pages, Databases, Relations and Linking</li>
+    <li>Discuss your specific needs and implement one Database for task tracking or knowledge management.</li> 
+</ul>
+<p>
+$60 or R800 per hour
+</p>
+<.cta>
+<.hlink href={"mailto:#{@contact}?subject='Notion project consulting'"}>More info</.hlink>
+</.cta>
+<.heading3>App Development</.heading3>
+<p>
+Notion is exteremely capable on its own. 
+With a small amount of development we can leverage the Notion API to build custom user interfaces, and data reporting.
+</p>
+<p>
+<.hlink href={~p"/apps"} target="_blank">This website</.hlink> show cases some examples.
+</p>
+<p>
+Using Notion as a data store for small applications such as these has a number of advantages:
+</p>
+<ul class="list-disc pl-6">
+    <li>Low cost compared to a cloud database</li>
+    <li>Highly reliable and available</li>
+    <li>No maintainence burden</li>
+    <li>Seemless integration between app data and other workstreams</li> 
+</ul>
+<p>
+Pricing to be calculated specifically for each project.
+</p>
+<.cta>
+<.hlink href={"mailto:#{@contact}?subject='Notion app development'"}>More info</.hlink>
+</.cta>
