--- a/lib/kdd_web/controllers/page_html/consult.html.heex
+++ b/lib/kdd_web/controllers/page_html/consult.html.heex
@@ -7,7 +7,11 @@ One that prioritises transparency and accountibility at all levels.
 And creates process that serve and benefit all the people who use them. 
 With the goal of building organisations where each inidividual is supported to thrive. 
 </p>
-<.heading2>Notion</.heading2>
+<.heading2>
+<.hlink href="https://notion.so" target="_blank">
+Notion
+</.hlink>
+</.heading2>
 <p>
 We live in a time when one's attention has become a commodity.
 This makes your focus a valuable asset.
