--- a/lib/kdd_web/controllers/page_html/consult.html.heex
+++ b/lib/kdd_web/controllers/page_html/consult.html.heex
@@ -1,6 +1,6 @@
-<.heading>Hollistic Management Consulting</.heading>
+<.heading>Holistic Management Consulting</.heading>
 <p>
-I am combining my experience working in fast-paced tech starups with my understanding of mindfulness and psychology to offer a different sort of management consulting.
+I am combining my experience working in fast-paced tech startups with my understanding of mindfulness and psychology to offer a different sort of management consulting.
 These consulting offerings are centered on the use of my favorite productivity tool, <.hlink href="https://notion.so" target="_blank">Notion</.hlink>. 
 What I am actually selling is a new approach to collaboration at work. 
 One that prioritises transparency and accountibility at all levels.  
