--- a/lib/kdd_web/controllers/page_html/yoga.html.heex
+++ b/lib/kdd_web/controllers/page_html/yoga.html.heex
@@ -1,5 +1,5 @@
 <.center>
-        <img src={~p"/images/mwm-logo-grey.png"} />
+        <img class="max-h-60" src={~p"/images/mwm-logo-grey.png"} />
 </.center>
 <.heading>Yoga Bio</.heading>
 <p>
