--- a/lib/kdd_web/controllers/page_html/about.html.heex
+++ b/lib/kdd_web/controllers/page_html/about.html.heex
@@ -1,11 +1,5 @@
 <h1 class="text-2xl font-semibold">About</h1>
 <p>
-  A place to host my side project. I am learning and experimenting with the <a
-    class="text-gray-600 hover:underline"
-    href="https://developers.notion.com/"
-  >Notion API</a>.
-</p>
-<p>
   Built in <a class="text-gray-600 hover:underline" href="https://www.phoenixframework.org/">Elixir Phoenix</a>, hosted on <a
     class="text-gray-600 hover:underline"
     href="https://fly.io/"
@@ -22,7 +16,7 @@
 </p>
 <h2 class="text-lg font-semibold"><a id="privacy">Privacy policy</a></h2>
 <p>
-  This website only stores the details required to connect your notion account. See the
+  This website only stores the details required to connect your Notion account. See the
   <a href="https://developers.notion.com/docs/authorization">documentation</a>
   for more information.
 </p>
