--- a/lib/kdd_web/controllers/error_html/404.html.heex
+++ b/lib/kdd_web/controllers/error_html/404.html.heex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <title>{assigns[:page_title] || "Karma Driven Development"}</title>
+    <title>Karma Driven Development | Page Not Found</title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <link rel="manifest" href={~p"/images/site.webmanifest"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
