--- a/lib/kdd_web/controllers/error_html/404.html.heex
+++ b/lib/kdd_web/controllers/error_html/404.html.heex
@@ -40,12 +40,10 @@
     </header>
     <main class="px-4 py-20 sm:px-6 lg:px-8">
       <div class="mx-auto max-w-2xl space-y-3">
-        <.heading>Error</.heading>
+        <.heading>404 Error</.heading>
+        <.bunny_svg />
         <p>
-            404
-        </p>
-        <p>
-            Not found.
+            Page not found.
         </p>
       </div>
     </main>
