--- a/lib/kdd_web/controllers/error_html/500.html.heex
+++ b/lib/kdd_web/controllers/error_html/500.html.heex
@@ -40,10 +40,8 @@
     </header>
     <main class="px-4 py-20 sm:px-6 lg:px-8">
       <div class="mx-auto max-w-2xl space-y-3">
-        <.heading>Error</.heading>
-        <p>
-            500
-        </p>
+        <.heading>500 Error</.heading>
+        <.bunny_svg />
         <p>
             Internal server error.
         </p>
